fixed images not showing up// needed a space due to folder being "graphics " instead of "graphics"

--- a/javajam.css
+++ b/javajam.css
@@ -2,10 +2,18 @@ body{
     font-family: Tahoma, Arial, sans-serif;
     background-color: #fcebb6;
     color: #221811;
-    background: #fcebb6 url("./graphics/fadedroad50.jpg") ;  
+    background-image: url("./graphics /fadedroad50.jpg") ; 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+}
+
+#homehero{
+    height: 300px;
+    background-image: url("./graphics /hero.jpg"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 main{
     padding-left: 2em;
@@ -81,11 +89,5 @@ img{
     padding-left: 10px;
     padding-right: 10px;
 }
-#homehero{
-    height: 300px;
-    background: url("./graphics/hero.jpg") no-repeat center/cover;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-      }
+
       
